--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,16 @@
   "compilerOptions": {
     "rootDir": "./src",
     "outDir": "./dist",
+    
     "target": "ESNext",
+    
     "module": "ESNext",
     "moduleResolution": "Bundler",
-    "lib": [
-      "ESNext",
-      "DOM"
-    ],
+    
+    "lib": ["ESNext", "DOM"],
+    
     "strict": true
   },
-  "include": [
-    "src/**/*"
-, "public/app.js"  ]
+  
+  "include": ["src/**/*"]
 }
