--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     },
     "devDependencies": {
         "typescript": "^5.7.3"
+    },
+    "dependencies": {
+        "vite": "^6.0.11"
     }
 }
